fix margin too small

--- a/_sass/pages/home/style.sass
+++ b/_sass/pages/home/style.sass
@@ -73,3 +73,7 @@
     .section-title
       margin-bottom: $default-margin
       color: invert($site-text-color)
+
+    .older-post
+      margin-top: $default-margin
+      margin-bottom: $default-margin
